--- a/AutonomIA.csproj
+++ b/AutonomIA.csproj
@@ -44,6 +44,13 @@
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\icono.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</MauiIcon>
+		<MauiSplashScreen Include="Resources\Images\logo.png">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</MauiSplashScreen>
+		<MauiSplashScreen Include="Resources\Splash\logo.png" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
@@ -60,8 +67,49 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+	  <MauiImage Remove="Resources\Images\logo.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\AppIcon\Icono.png" />
+	  <None Remove="Resources\Splash\Logo.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.60" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+		<PackageReference Include="SQLite-net-pcl" Version="1.9.172" />
+		<PackageReference Include="Syncfusion.Maui.AIAssistView" Version="29.1.40" />
+		<PackageReference Include="Syncfusion.Maui.Core" Version="29.1.40" />
+		<PackageReference Include="Syncfusion.Maui.DataForm" Version="29.1.40" />
+		<PackageReference Include="Syncfusion.Maui.Inputs" Version="29.1.40" />
+		<PackageReference Include="Syncfusion.Maui.NavigationDrawer" Version="29.1.40" />
+		<PackageReference Include="Syncfusion.Maui.Scheduler" Version="29.1.40" />
+		<PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.0.4" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Models\" />
+	  <Folder Include="Services\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiFont Update="C:\Users\dxmxt\.nuget\packages\syncfusion.maui.core\29.1.40\buildTransitive\..\buildTransitive\Resources\Fonts\MauiMaterialAssets.ttf">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </MauiFont>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Resources\Styles\Colors.xaml">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\MainLayout.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
