--- a/AutonomIA.csproj
+++ b/AutonomIA.csproj
@@ -81,6 +81,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 		<PackageReference Include="SQLite-net-pcl" Version="1.9.172" />
 		<PackageReference Include="Syncfusion.Maui.AIAssistView" Version="29.1.40" />
+		<PackageReference Include="Syncfusion.Maui.Buttons" Version="29.1.40" />
 		<PackageReference Include="Syncfusion.Maui.Core" Version="29.1.40" />
 		<PackageReference Include="Syncfusion.Maui.DataForm" Version="29.1.40" />
 		<PackageReference Include="Syncfusion.Maui.Inputs" Version="29.1.40" />
